# ML_for_Scala

./: .gitignore  CLAUDE.md  README.md  build-native.bat  build-native.sh  build.sbt
plotting/src/main/scala/com/mlscala/plotting/: PlotlyData.scala  PlotlyRenderer.scala  PlotlyService.scala
polars/src/main/scala/com/mlscala/polars/: DataFrameOps.scala  PolarsJNI.scala  RustStreamingOps.scala  StreamingDataFrameOps.scala
project/: Libraries.scala
rust-polars/: Cargo.toml  build.sh
rust-polars/src/: lib.rs
src/main/scala/com/mlscala/: Main.scala  RustStreamingDemo.scala  StreamingDemo.scala
src/main/scala/com/mlscala/plotting/: PlotlyData.scala  PlotlyRenderer.scala  PlotlyService.scala
src/main/scala/com/mlscala/polars/: DataFrameOps.scala  PolarsJNI.scala
