[package]
name = "rust-polars"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.33", features = ["lazy", "csv", "json", "parquet"] }
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
